--- a/locale/ja/LC_MESSAGES/Horde_Token.po
+++ b/locale/ja/LC_MESSAGES/Horde_Token.po
@@ -1,28 +1,35 @@
-# Japanese translations for Horde_Token module.
-# Copyright (C) 2010 Horde Project
-# This file is distributed under the same license as the Horde_Token module.
-# Automatically generated, 2010.
+# Japanese translation for Horde.
+# Copyright 2004-2009 Horde Project
+# This file is distributed under the same license as the Horde package.
+# Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
+"POT-Creation-Date: 2011-03-15 13:27+0100\n"
+"PO-Revision-Date: 2011-03-19 17:09+0900\n"
+"Last-Translator: Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>\n"
 "Language-Team: i18n@lists.horde.org\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: lib/Horde/Token/Base.php:196
+#: lib/Horde/Token/Base.php:187
 msgid "This token has been used before!"
-msgstr ""
+msgstr "このトークンは既に使用されています！"
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:182
+msgid "This token is invalid!"
+msgstr "このトークンは不正です！"
+
+#: lib/Horde/Token/Base.php:159
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"この要求が本当にあなたからのものであるか確認できません。不正な要求の可能性が"
+"あります。もしもあなたがこの動作の実行を望むなら、もう一度行って下さい。"
