--- a/locale/fi/LC_MESSAGES/Horde_Token.po
+++ b/locale/fi/LC_MESSAGES/Horde_Token.po
@@ -1,28 +1,35 @@
 # Finnish translations for Horde_Token module.
 # Copyright (C) 2010 Horde Project
 # This file is distributed under the same license as the Horde_Token module.
-# Automatically generated, 2010.
+# Leena Heino <liinu@uta.fi>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: i18n@lists.horde.org\n"
+"POT-Creation-Date: 2011-03-17 10:59+0200\n"
+"PO-Revision-Date: 2011-04-03 11:14:45+0300\n"
+"Last-Translator: Leena Heino <liinu@uta.fi>\n"
+"Language-Team: Finnish <i18n@lists.horde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: lib/Horde/Token/Base.php:196
+#: lib/Horde/Token/Base.php:187
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Tätä tokenia ei ole vielä koskaan käytetty!"
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:182
+msgid "This token is invalid!"
+msgstr "Tämä token on kelvoton!"
+
+#: lib/Horde/Token/Base.php:159
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Emme voi varmistaa tuliko tämä pyyntö juuri sinulta. Tämä voi tarkoittaa "
+"väärennettyä pyyntöä. Jos olet varma, että yritit tehdä tätä toimintoa, niin "
+"yritä nyt uudelleen."
