--- a/locale/pt_BR/LC_MESSAGES/Horde_Token.po
+++ b/locale/pt_BR/LC_MESSAGES/Horde_Token.po
@@ -7,22 +7,30 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
+"POT-Creation-Date: 2011-03-15 13:27+0100\n"
+"PO-Revision-Date: 2011-06-12 03:09-0300\n"
+"Last-Translator: Luis Felipe Marzagao <duli@easylifeproject.org>\n"
 "Language-Team: i18n@lists.horde.org\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: lib/Horde/Token/Base.php:196
+#: lib/Horde/Token/Base.php:187
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Esse token foi usado antes!"
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:182
+msgid "This token is invalid!"
+msgstr "Este token é inválido!"
+
+#: lib/Horde/Token/Base.php:159
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Não podemos certificar que essa solicitação foi realmente enviada por você. "
+"Pode se tratar de uma solicitação maliciosa. Se você desejou executar esta "
+"ação, você pode tentar novamente agora."
