--- a/locale/lt/LC_MESSAGES/Horde_Token.po
+++ b/locale/lt/LC_MESSAGES/Horde_Token.po
@@ -1,29 +1,36 @@
 # Lithuanian translations for Horde_Token module.
-# Copyright (C) 2010 Horde Project
+# Copyright 2010-2011 The Horde Project
 # This file is distributed under the same license as the Horde_Token module.
-# Automatically generated, 2010.
+# Vilius Šumskas <vilius@lnk.lt>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: i18n@lists.horde.org\n"
+"POT-Creation-Date: 2011-05-28 01:09+0300\n"
+"PO-Revision-Date: 2011-06-28 01:12+0300\n"
+"Last-Translator: Vilius Šumskas <vilius@lnk.lt>\n"
+"Language-Team: Lithuanian <vilius@lnk.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: lib/Horde/Token/Base.php:196
+#: lib/Horde/Token/Base.php:187
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Šis žetonas jau buvo panaudotas!"
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:182
+msgid "This token is invalid!"
+msgstr "Šis žetonas neteisingas!"
+
+#: lib/Horde/Token/Base.php:159
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Mes negalime nustatyti, kad ši užklausa buvo siųsta jūsų. Tai gali būti "
+"bandymas įsilaužti. Jeigu iš tikrųjų norėjote įvykdyti šį veiksmą, galite "
+"atlikti tai dabar dar kartą."
