--- a/locale/lv/LC_MESSAGES/Horde_Token.po
+++ b/locale/lv/LC_MESSAGES/Horde_Token.po
@@ -1,29 +1,40 @@
-# Latvian translations for Horde_Token module.
-# Copyright (C) 2010 Horde Project
-# This file is distributed under the same license as the Horde_Token module.
-# Automatically generated, 2010.
+# Latvian translations for Horde_Token package.
+# Copyright (C) 2011 Horde Project
+# This file is distributed under the same license as the Horde_Token package.
+# Automatically generated, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
+"POT-Creation-Date: 2011-03-15 13:27+0100\n"
+"PO-Revision-Date: 2011-07-21 15:27+0300\n"
+"Last-Translator: Jānis Eisaks <jancs@dv.lv>\n"
 "Language-Team: i18n@lists.horde.org\n"
+"Language: lv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
 "2);\n"
+"X-Poedit-Language: Latvian\n"
+"X-Poedit-Country: LATVIA\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
-#: lib/Horde/Token/Base.php:196
+#: lib/Horde/Token/Base.php:187
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Šis talons ir jau iepriekš izmantots."
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:182
+msgid "This token is invalid!"
+msgstr "Šis talons ir nederīgs"
+
+#: lib/Horde/Token/Base.php:159
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Mēs nevaram pārliecināties, ka šo pieprasījumu sūtījāt Jūs. Tas var būt arī "
+"ļaunprātīgs pieprasījums. Ja esat nodomājis (-usi) izpildīt šo darbību, "
+"varat atkārtot tagad."
