--- a/locale/pt_BR/LC_MESSAGES/Horde_Token.po
+++ b/locale/pt_BR/LC_MESSAGES/Horde_Token.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2012-01-17 12:38+0100\n"
-"PO-Revision-Date: 2012-03-27 22:48-0300\n"
+"PO-Revision-Date: 2012-06-30 19:49-0300\n"
 "Last-Translator: Luis Felipe Marzagao <duli@easylifeproject.org>\n"
 "Language-Team: i18n@lists.horde.org\n"
 "Language: \n"
@@ -24,8 +24,8 @@ msgid ""
 "you submitted was only valid for %s minutes. Please try again now."
 msgstr ""
 "Esta requisição não pode ser completada porque o link que você seguiu ou o "
-"formulário que você enviou era válido somente por % minutos. Por favor tente "
-"novamente agora."
+"formulário que você enviou era válido somente por %s minutos. Por favor "
+"tente novamente agora."
 
 #: lib/Horde/Token/Base.php:191
 msgid "This token has been used before!"
