--- a/locale/nl/LC_MESSAGES/Horde_Token.po
+++ b/locale/nl/LC_MESSAGES/Horde_Token.po
@@ -1,28 +1,47 @@
 # Dutch translations for Horde_Token module.
 # Copyright 2010-2012 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Token module.
-# Automatically generated, 2010.
 #
+# Arjen de Korte <build+horde@de-korte.org>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: i18n@lists.horde.org\n"
+"POT-Creation-Date: 2012-01-17 12:38+0100\n"
+"PO-Revision-Date: 2012-11-02 22:53+0100\n"
+"Last-Translator: Arjen de Korte <build+horde@de-korte.org>\n"
+"Language-Team: Dutch <i18n@lists.horde.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Lokalize 1.4\n"
 
-#: lib/Horde/Token/Base.php:196
-msgid "This token has been used before!"
+#: lib/Horde/Token/Base.php:167
+#, php-format
+msgid ""
+"This request cannot be completed because the link you followed or the form "
+"you submitted was only valid for %s minutes. Please try again now."
 msgstr ""
+"Dit verzoek kan niet worden gehonoreerd aangezien de link die u volgde of "
+"het formulierdat u instuurde slechts %s minuten geldig was. Probeer het nu "
+"nogmaals."
 
-#: lib/Horde/Token/Base.php:172
+#: lib/Horde/Token/Base.php:191
+msgid "This token has been used before!"
+msgstr "Dit token is al eens gebruikt!"
+
+#: lib/Horde/Token/Base.php:187
+msgid "This token is invalid!"
+msgstr "Het token is ongeldig!"
+
+#: lib/Horde/Token/Base.php:161
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"We hebben niet kunnen vaststellen dat dit verzoek van u afkomstig is. Het "
+"zou een kwaadaardig verzoek kunnen zijn. Als u werkelijk deze actie wilt "
+"uitvoeren, kunt u hetnu nogmaals proberen."
