--- a/locale/sk/LC_MESSAGES/Horde_Token.po
+++ b/locale/sk/LC_MESSAGES/Horde_Token.po
@@ -2,14 +2,16 @@
 # Copyright 2010-2012 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Token module.
 # Automatically generated, 2010.
+# Martin Matuška <martin@matuska.org>, 2008
+# Jozef Sudolský <jozef.sudolsky@elbia.sk>, 2012
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2011-03-15 13:27+0100\n"
-"PO-Revision-Date: 2011-05-18 17:17+0100\n"
-"Last-Translator: Martin Matuška <martin@matuska.org>\n"
+"POT-Creation-Date: 2012-01-17 12:38+0100\n"
+"PO-Revision-Date: 2012-12-30 17:54+0200\n"
+"Last-Translator: Jozef Sudolsky <jozef.sudolsky@elbia.sk>\n"
 "Language-Team: i18n@lists.horde.org\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -17,15 +19,25 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
-#: lib/Horde/Token/Base.php:187
+#: lib/Horde/Token/Base.php:167
+#, php-format
+msgid ""
+"This request cannot be completed because the link you followed or the form "
+"you submitted was only valid for %s minutes. Please try again now."
+msgstr ""
+"Požiadavka nemohla byť dokončená, pretože odkaz, ktorý ste nasledovali alebo "
+"formulár, ktorý ste odoslali bol platný iba po dobu %s minút. Skúste to, "
+"prosím, znovu."
+
+#: lib/Horde/Token/Base.php:191
 msgid "This token has been used before!"
 msgstr "Tento token už bol použitý!"
 
-#: lib/Horde/Token/Base.php:182
+#: lib/Horde/Token/Base.php:187
 msgid "This token is invalid!"
 msgstr "Tento token je neplatný!"
 
-#: lib/Horde/Token/Base.php:159
+#: lib/Horde/Token/Base.php:161
 msgid ""
 "We cannot verify that this request was really sent by you. It could be a "
 "malicious request. If you intended to perform this action, you can retry it "
