--- a/locale/es/LC_MESSAGES/Horde_Token.po
+++ b/locale/es/LC_MESSAGES/Horde_Token.po
@@ -1,14 +1,14 @@
 # Spanish translations for Horde_Token package.
-# Copyright 2012-2013 Horde LLC (http://www.horde.org/)
+# Copyright (C) 2013 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Token package.
-# Automatically generated, 2012.
+# Automatically generated, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Token \n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2012-01-17 12:38+0100\n"
-"PO-Revision-Date: 2012-01-17 12:38+0100\n"
+"PO-Revision-Date: 2013-06-11 20:26+0200\n"
 "Last-Translator: Manuel P. Ayala <mayala@unex.es>, Juan C. Blanco "
 "<jcblanco@fi.upm.es>\n"
 "Language-Team: i18n@lists.horde.org\n"
@@ -42,5 +42,5 @@ msgid ""
 "now."
 msgstr ""
 "No se pudo verificar que esta solicitud fue realmente enviada por usted. "
-"Puede ser una solicitud maliintencionada. Si quería realizar esta acción, "
+"Puede ser una solicitud malintencionada. Si quería realizar esta acción, "
 "puede probar otra vez ahora."
