[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).

--- a/locale/el/LC_MESSAGES/Horde_Token.po
+++ b/locale/el/LC_MESSAGES/Horde_Token.po
@@ -8,17 +8,19 @@ msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2015-10-02 16:44+0200\n"
+"Last-Translator: Antonis Limperis <limperis@cti.gr>\n"
 "Language-Team: i18n@lists.horde.org\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: el\n"
+"X-Generator: Poedit 1.7.1\n"
 
 #: lib/Horde/Token/Base.php:196
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Αυτό το διακριτικό (Token) έχει χρησιμοποιηθεί στο παρελθόν!"
 
 #: lib/Horde/Token/Base.php:172
 msgid ""
@@ -26,3 +28,6 @@ msgid ""
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Δεν ήταν δυνατό  να ελεγθεί αν το αίτημα αυτό έχει πραγματικά αποσταλεί από "
+"εσάς. Θα μπορούσε να είναι ένα κακόβουλο αίτημα. Εάν επιθυμείτε να "
+"εκτελέσετε αυτήν την ενέργεια, μπορείτε να προσπαθήσετε ξανά τώρα."
