--- a/locale/tr/LC_MESSAGES/Horde_Token.po
+++ b/locale/tr/LC_MESSAGES/Horde_Token.po
@@ -1,5 +1,5 @@
 # Turkish translations for Horde_Token module.
-# Copyright 2010-2017 Horde LLC (http://www.horde.org/)
+# Copyright 2010-2016 Horde LLC (http://www.horde.org/)
 # This file is distributed under the same license as the Horde_Token module.
 # Automatically generated, 2010.
 #
@@ -8,17 +8,19 @@ msgstr ""
 "Project-Id-Version: Horde_Token\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2010-12-01 10:19+0100\n"
-"PO-Revision-Date: 2010-12-01 10:19+0100\n"
+"PO-Revision-Date: 2017-06-08 14:47+0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: i18n@lists.horde.org\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: tr\n"
+"X-Generator: Poedit 1.8.12\n"
 
 #: lib/Horde/Token/Base.php:196
 msgid "This token has been used before!"
-msgstr ""
+msgstr "Bu belirteç daha önce kullanılmış!"
 
 #: lib/Horde/Token/Base.php:172
 msgid ""
@@ -26,3 +28,6 @@ msgid ""
 "malicious request. If you intended to perform this action, you can retry it "
 "now."
 msgstr ""
+"Bu isteğin gerçekten sizin tarafınızdan gönderildiğini doğrulayamayız. Kötü "
+"niyetli bir talep olabilir. Bu işlemi gerçekleştirmeyi düşünüyorsanız şimdi "
+"deneyebilirsiniz."
